--- a/src/main/resources/fxml/board.fxml
+++ b/src/main/resources/fxml/board.fxml
@@ -2,32 +2,89 @@
 
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<GridPane fx:id="board" hgap="-3" GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="1" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerBoard">
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<GridPane fx:id="board" prefHeight="643.0" prefWidth="1517.0" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="1" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerBoard">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="363.0" minWidth="10.0" prefWidth="279.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="363.0" minWidth="10.0" prefWidth="279.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="363.0" minWidth="10.0" prefWidth="279.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="363.0" minWidth="10.0" prefWidth="256.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="454.0" minWidth="10.0" prefWidth="237.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="661.0" minWidth="10.0" prefWidth="259.0" />
-        <ColumnConstraints />
+        <ColumnConstraints hgrow="SOMETIMES" percentWidth="17.0" />
+        <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" />
+        <ColumnConstraints hgrow="SOMETIMES" percentWidth="8.899999999999999" />
+        <ColumnConstraints hgrow="SOMETIMES" percentWidth="34.1" />
+        <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints maxHeight="300.0" minHeight="10.0" prefHeight="142.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="273.0" minHeight="10.0" prefHeight="154.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="273.0" minHeight="10.0" prefHeight="154.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="273.0" minHeight="10.0" prefHeight="154.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="236.0" minHeight="10.0" prefHeight="157.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="236.0" minHeight="10.0" prefHeight="236.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="192.0" minHeight="109.0" percentHeight="19.0" prefHeight="109.0" vgrow="NEVER" />
+        <RowConstraints maxHeight="238.0" minHeight="28.0" percentHeight="18.0" prefHeight="133.0" vgrow="NEVER" />
+        <RowConstraints maxHeight="285.0" minHeight="31.0" percentHeight="12.0" prefHeight="174.0" vgrow="NEVER" />
+        <RowConstraints maxHeight="393.0" minHeight="0.0" percentHeight="28.799999999999997" prefHeight="111.0" vgrow="NEVER" />
+        <RowConstraints maxHeight="87.0" minHeight="0.0" percentHeight="0.0" prefHeight="87.0" />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints percentHeight="NaN" />
+        <RowConstraints percentHeight="NaN" />
     </rowConstraints>
-    <Pane fx:id="leftRoot" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.rowIndex="0" GridPane.rowSpan="6" />
-    <ImageView fx:id="boardLeft" fitHeight="${leftRoot.height}" fitWidth="${leftRoot.width}" pickOnBounds="true" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.rowIndex="0" GridPane.rowSpan="6">
-        <Image url="@../assets/board/board_left_1.png" />
-    </ImageView>
-    <Pane fx:id="rightRoot" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowIndex="0" GridPane.rowSpan="6" />
-    <ImageView fx:id="boardRight" fitHeight="${rightRoot.height}" fitWidth="${rightRoot.width}" pickOnBounds="true" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.rowIndex="0" GridPane.rowSpan="6">
-        <Image url="@../assets/board/board_right_1.png" />
-    </ImageView>
+    <Pane prefHeight="672.0" prefWidth="436.0" GridPane.columnSpan="2" GridPane.rowSpan="6">
+        <Pane layoutX="635.0" layoutY="181.0" prefHeight="107.0" prefWidth="209.0" />
+        <Pane layoutX="615.0" layoutY="511.0" prefHeight="107.0" prefWidth="209.0" />
+        <Pane layoutX="318.0" layoutY="525.0" prefHeight="107.0" prefWidth="209.0" />
+        <Pane layoutX="605.0" layoutY="380.0" prefHeight="107.0" prefWidth="209.0">
+            <children>
+                <Pane prefHeight="107.0" prefWidth="189.0" />
+            </children>
+        </Pane>
+        <ImageView fx:id="boardLeft" fitHeight="673.0" fitWidth="432.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="@../assets/board/board_left_1.png" />
+        </ImageView>
+        <ImageView fx:id="topRedSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="-1.0" layoutY="212.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+            <image>
+                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
+            </image>
+        </ImageView>
+        <ImageView fx:id="middleRedSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="-1.0" layoutY="312.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+            <image>
+                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
+            </image>
+        </ImageView>
+        <ImageView fx:id="bottomRedSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="-1.0" layoutY="411.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+            <image>
+                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
+            </image>
+        </ImageView>
+    </Pane>
+    <Pane GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="0" GridPane.rowSpan="6">
+        <ImageView fx:id="boardRight" fitHeight="673.0" fitWidth="472.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="0" GridPane.rowSpan="6">
+            <Image url="@../assets/board/board_right_1.png" />
+        </ImageView>
+        <ImageView fx:id="topYellowSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="368.0" layoutY="348.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
+            <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
+        </ImageView>
+        <ImageView fx:id="middleYellowSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="368.0" layoutY="446.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
+            <image>
+                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
+            </image>
+        </ImageView>
+        <ImageView fx:id="bottomYellowSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="368.0" layoutY="541.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
+            <image>
+                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
+            </image>
+        </ImageView>
+        <ImageView fx:id="rightBlueSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="242.0" layoutY="-22.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
+            </image>
+        </ImageView>
+        <ImageView fx:id="middleBlueSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="145.0" layoutY="-22.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
+            </image>
+        </ImageView>
+        <ImageView fx:id="leftBlueSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="46.0" layoutY="-22.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
+            </image>
+        </ImageView>
+    </Pane>
 </GridPane>
-
