--- a/src/main/resources/fxml/powerup.fxml
+++ b/src/main/resources/fxml/powerup.fxml
@@ -3,20 +3,22 @@
 
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<GridPane hgap="10.0" prefHeight="162.0" prefWidth="375.0" GridPane.columnIndex="4" GridPane.rowIndex="3" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerPowerUp">
+<GridPane hgap="10.0" GridPane.columnIndex="5" GridPane.rowIndex="3" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerPowerUp">
     <columnConstraints>
         <ColumnConstraints hgrow="NEVER" percentWidth="33" />
         <ColumnConstraints hgrow="NEVER" percentWidth="33" />
         <ColumnConstraints hgrow="NEVER" percentWidth="33" />
     </columnConstraints>
-    <ImageView fx:id="powerupFirst" fitHeight="151.0" fitWidth="121.0" GridPane.columnIndex="0" GridPane.rowIndex="0">
+    <ImageView fx:id="powerupFirst" fitHeight="203.0" fitWidth="116.0" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="0">
         <Image url="@../assets/cards/AD_powerups_IT_025.png" />
     </ImageView>
-    <ImageView fx:id="powerupSecond" fitHeight="154.0" fitWidth="121.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
+    <ImageView fx:id="powerupSecond" fitHeight="203.0" fitWidth="116.0" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="0">
         <Image url="@../assets/cards/AD_powerups_IT_023.png" />
     </ImageView>
-    <ImageView fx:id="powerupThird" fitHeight="154.0" fitWidth="117.0" GridPane.columnIndex="2" GridPane.rowIndex="0">
-        <Image url="@../assets/cards/AD_weapons_IT_022.png" />
+    <ImageView fx:id="powerupThird" fitHeight="203.0" fitWidth="116.0" layoutX="10.0" layoutY="10.0" preserveRatio="true" GridPane.columnIndex="2">
+        <image>
+            <Image url="@../assets/cards/AD_powerups_IT_025.png" />
+        </image>
     </ImageView>
     <rowConstraints>
         <RowConstraints />
