--- a/src/main/resources/fxml/table.fxml
+++ b/src/main/resources/fxml/table.fxml
@@ -12,40 +12,43 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<GridPane fx:id="mainPane" hgap="10.0" maxHeight="1080" maxWidth="1920" minHeight="0" minWidth="0" prefHeight="1044.0" prefWidth="1904.0" stylesheets="@../css/match.css" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerTable">
+<GridPane fx:id="root" depthTest="DISABLE" hgap="10.0" maxHeight="1080" maxWidth="1920" minHeight="0" minWidth="0" prefHeight="977.0" prefWidth="1904.0" stylesheets="@../css/match.css" vgap="10.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerTable">
 
     <columnConstraints>
-        <ColumnConstraints hgrow="NEVER" percentWidth="10" />
-        <ColumnConstraints hgrow="NEVER" percentWidth="20" />
-        <ColumnConstraints hgrow="NEVER" percentWidth="20" />
-        <ColumnConstraints hgrow="NEVER" percentWidth="20" />
-        <ColumnConstraints hgrow="NEVER" percentWidth="20" />
-        <ColumnConstraints hgrow="NEVER" percentWidth="10" />
+        <ColumnConstraints hgrow="NEVER" percentWidth="5.0" />
+        <ColumnConstraints hgrow="NEVER" maxWidth="675.92" minWidth="10.0" prefWidth="388.0" />
+        <ColumnConstraints hgrow="NEVER" maxWidth="265.54" minWidth="0.0" prefWidth="131.0" />
+        <ColumnConstraints hgrow="NEVER" maxWidth="626.0" minWidth="10.0" prefWidth="616.0" />
+        <ColumnConstraints hgrow="NEVER" maxWidth="280.0" minWidth="10.0" prefWidth="125.0" />
+        <ColumnConstraints hgrow="NEVER" maxWidth="675.92" minWidth="10.0" prefWidth="365.0" />
+        <ColumnConstraints hgrow="NEVER" maxWidth="316.0" minWidth="0.0" percentWidth="5.0" prefWidth="0.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints percentHeight="15.0" vgrow="NEVER" />
-        <RowConstraints percentHeight="65.0" vgrow="NEVER" />
-        <RowConstraints maxHeight="95.0" minHeight="0.0" percentHeight="4.0" prefHeight="2.0" vgrow="NEVER" />
-        <RowConstraints maxHeight="203.0" minHeight="115.0" percentHeight="15.0" prefHeight="201.0" vgrow="NEVER" />
-        <RowConstraints maxHeight="203.0" minHeight="115.0" percentHeight="1" prefHeight="201.0" vgrow="NEVER" />
+        <RowConstraints maxHeight="96.0" minHeight="6.0" percentHeight="4.0" prefHeight="96.0" vgrow="NEVER" />
+        <RowConstraints maxHeight="703.0" minHeight="613.0" percentHeight="75.0" prefHeight="691.0" vgrow="NEVER" />
+        <RowConstraints maxHeight="182.0" minHeight="0.0" percentHeight="2.0" prefHeight="0.0" vgrow="NEVER" />
+        <RowConstraints maxHeight="193.0" minHeight="16.0" percentHeight="20.0" prefHeight="123.0" vgrow="NEVER" />
     </rowConstraints>
-    <Button id="endTurn" prefHeight="66.0" prefWidth="182.0" text="End Turn" textAlignment="CENTER" GridPane.columnIndex="5" GridPane.rowIndex="0">
+ <ImageView fx:id="currentPlayer" fitHeight="219.0" fitWidth="897.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="2">
+     <Image url="@../assets/player/player_blue.png" />
+ </ImageView>
+    <Button id="endTurn" prefHeight="66.0" prefWidth="182.0" text="End Turn" textAlignment="CENTER" GridPane.columnIndex="6">
       <font>
-         <Font size="24.0" />
+         <Font size="15.0" />
       </font>
     </Button>
-    <Button id="leaveGame" prefHeight="66.0" prefWidth="182.0" text="Leave" textAlignment="CENTER">
+    <Button id="leaveGame" prefHeight="66.0" prefWidth="182.0" text="Leave" textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="0">
         <font>
-            <Font size="24.0" />
+            <Font size="15.0" />
         </font>
         <GridPane.margin>
             <Insets left="10.0" />
         </GridPane.margin>
     </Button>
-    <TextFlow prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="3">
+    <TextFlow prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="3">
         <Text text="Ammo&#10;">
          <font>
-            <Font size="30.0" />
+            <Font size="24.0" />
          </font></Text>
         <Text id="blueAmmo" fx:id="blueAmmo" fill="RED" text="3&#10;">
          <font>
@@ -60,9 +63,161 @@
             <Font size="24.0" />
          </font></Text>
     </TextFlow>
-    <Pane fx:id="rootPlayer" GridPane.columnIndex="2" GridPane.columnSpan="1" GridPane.rowIndex="3">
-    <ImageView fx:id="currentPlayer" fitHeight="${rootPlayer.height}" fitWidth="${rootPlayer.width}" pickOnBounds="true" GridPane.columnIndex="2" GridPane.columnSpan="1" GridPane.rowIndex="3">
-        <Image url="@../assets/player/player_blue.png" />
-    </ImageView>
-    </Pane>
+   <fx:include source="powerup.fxml" />
+   <fx:include source="weapon.fxml" />
+   <fx:include source="board.fxml" />
+   <GridPane GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="1">
+     <columnConstraints>
+       <ColumnConstraints hgrow="SOMETIMES" maxWidth="530.0" minWidth="10.0" prefWidth="168.0" />
+         <ColumnConstraints hgrow="SOMETIMES" maxWidth="551.0" minWidth="10.0" prefWidth="108.0" />
+         <ColumnConstraints hgrow="SOMETIMES" maxWidth="530.0" minWidth="8.0" prefWidth="26.0" />
+         <ColumnConstraints hgrow="SOMETIMES" maxWidth="530.0" minWidth="10.0" prefWidth="99.0" />
+         <ColumnConstraints hgrow="SOMETIMES" maxWidth="530.0" minWidth="7.0" prefWidth="62.0" />
+       <ColumnConstraints hgrow="SOMETIMES" maxWidth="599.0" minWidth="0.0" prefWidth="111.0" />
+         <ColumnConstraints hgrow="SOMETIMES" maxWidth="599.0" minWidth="10.0" prefWidth="48.0" />
+         <ColumnConstraints hgrow="SOMETIMES" maxWidth="599.0" minWidth="10.0" prefWidth="100.0" />
+         <ColumnConstraints hgrow="SOMETIMES" maxWidth="599.0" minWidth="10.0" prefWidth="183.0" />
+     </columnConstraints>
+     <rowConstraints>
+         <RowConstraints maxHeight="284.0" minHeight="10.0" prefHeight="168.0" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="284.0" minHeight="10.0" prefHeight="105.0" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="284.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="284.0" minHeight="10.0" prefHeight="117.0" vgrow="SOMETIMES" />
+       <RowConstraints maxHeight="284.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
+       <RowConstraints maxHeight="387.0" minHeight="10.0" prefHeight="104.0" vgrow="SOMETIMES" />
+       <RowConstraints maxHeight="216.0" minHeight="10.0" prefHeight="105.0" vgrow="SOMETIMES" />
+     </rowConstraints>
+      <children>
+         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="7" GridPane.rowIndex="5" />
+         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="5">
+            <children>
+               <ImageView fitHeight="42.0" fitWidth="43.0" layoutX="26.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../assets/ammo/AD_ammo_042.png" />
+                  </image>
+               </ImageView>
+            </children></Pane>
+         <Pane prefHeight="117.0" prefWidth="104.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <children>
+               <ImageView fitHeight="42.0" fitWidth="43.0" layoutX="11.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../assets/ammo/AD_ammo_042.png" />
+                  </image>
+               </ImageView>
+            </children></Pane>
+         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <children>
+               <ImageView fitHeight="42.0" fitWidth="43.0" layoutX="14.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../assets/ammo/AD_ammo_042.png" />
+                  </image>
+               </ImageView>
+            </children></Pane>
+         <Pane layoutX="174.0" layoutY="187.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="7" GridPane.rowIndex="1">
+            <children>
+               <ImageView fitHeight="42.0" fitWidth="43.0" layoutX="64.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../assets/ammo/AD_ammo_042.png" />
+                  </image>
+               </ImageView>
+            </children></Pane>
+         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
+            <children>
+               <ImageView fitHeight="42.0" fitWidth="43.0" layoutX="7.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../assets/ammo/AD_ammo_042.png" />
+                  </image>
+               </ImageView>
+            </children></Pane>
+         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="3">
+            <children>
+               <ImageView fitHeight="42.0" fitWidth="43.0" layoutX="21.0" layoutY="74.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../assets/ammo/AD_ammo_042.png" />
+                  </image>
+               </ImageView>
+            </children></Pane>
+         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="7" GridPane.rowIndex="3">
+            <children>
+               <ImageView fitHeight="42.0" fitWidth="43.0" layoutX="-7.0" layoutY="74.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../assets/ammo/AD_ammo_042.png" />
+                  </image>
+               </ImageView>
+            </children></Pane>
+         <Pane fx:id="tile10" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="5">
+            <children>
+               <ImageView fitHeight="42.0" fitWidth="43.0" layoutX="7.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../assets/ammo/AD_ammo_042.png" />
+                  </image>
+               </ImageView>
+            </children></Pane>
+         <Pane fx:id="tile00" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+      </children>
+   </GridPane>
+   <TextFlow prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <children>
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Leaderboard&#10;" wrappingWidth="355.7294921875">
+            <font>
+               <Font size="48.0" />
+            </font>
+         </Text>
+         <Text fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="FirstUsername">
+            <font>
+               <Font size="30.0" />
+            </font>
+         </Text>
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text=" 18&#10;">
+            <font>
+               <Font size="30.0" />
+            </font>
+         </Text>
+         <Text fill="#10c90d" strokeType="OUTSIDE" strokeWidth="0.0" text="SecondUsername">
+            <font>
+               <Font size="30.0" />
+            </font>
+         </Text>
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text=" 18&#10;">
+            <font>
+               <Font size="30.0" />
+            </font>
+         </Text>
+         <Text fill="#f6ff00" strokeType="OUTSIDE" strokeWidth="0.0" text="ThirdUsername">
+            <font>
+               <Font size="30.0" />
+            </font>
+         </Text>
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text=" 18&#10;">
+            <font>
+               <Font size="30.0" />
+            </font>
+         </Text>
+         <Text fill="#434242" strokeType="OUTSIDE" strokeWidth="0.0" text="FourthUsername">
+            <font>
+               <Font size="30.0" />
+            </font>
+         </Text>
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text=" 18&#10;">
+            <font>
+               <Font size="30.0" />
+            </font>
+         </Text>
+         <Text fill="#1e00ff" strokeType="OUTSIDE" strokeWidth="0.0" text="FifthUsername">
+            <font>
+               <Font size="30.0" />
+            </font>
+         </Text>
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text=" 18&#10;">
+            <font>
+               <Font size="30.0" />
+            </font>
+         </Text>
+      </children>
+   </TextFlow>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
 </GridPane>
