--- a/files/fxml/board.fxml
+++ b/files/fxml/board.fxml
@@ -7,84 +7,85 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="board" prefHeight="643.0" prefWidth="1517.0" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="1" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerBoard">
+<GridPane fx:id="board" prefHeight="673.0" prefWidth="858.0" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="2" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerBoard">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" percentWidth="17.0" />
-        <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" />
-        <ColumnConstraints hgrow="SOMETIMES" percentWidth="8.899999999999999" />
-        <ColumnConstraints hgrow="SOMETIMES" percentWidth="34.1" />
-        <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
+        <ColumnConstraints hgrow="SOMETIMES" percentWidth="48.0" />
+        <ColumnConstraints hgrow="SOMETIMES" percentWidth="52.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints maxHeight="192.0" minHeight="109.0" percentHeight="19.0" prefHeight="109.0" vgrow="NEVER" />
-        <RowConstraints maxHeight="238.0" minHeight="28.0" percentHeight="18.0" prefHeight="133.0" vgrow="NEVER" />
-        <RowConstraints maxHeight="285.0" minHeight="31.0" percentHeight="12.0" prefHeight="174.0" vgrow="NEVER" />
-        <RowConstraints maxHeight="393.0" minHeight="0.0" percentHeight="28.799999999999997" prefHeight="111.0" vgrow="NEVER" />
-        <RowConstraints maxHeight="87.0" minHeight="0.0" percentHeight="0.0" prefHeight="87.0" />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints percentHeight="NaN" />
-        <RowConstraints percentHeight="NaN" />
+        <RowConstraints maxHeight="192.0" minHeight="109.0" percentHeight="100.0" prefHeight="109.0" vgrow="NEVER" />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
     </rowConstraints>
     <Pane prefHeight="672.0" prefWidth="436.0" GridPane.columnSpan="2" GridPane.rowSpan="6">
-        <Pane layoutX="635.0" layoutY="181.0" prefHeight="107.0" prefWidth="209.0" />
-        <Pane layoutX="615.0" layoutY="511.0" prefHeight="107.0" prefWidth="209.0" />
-        <Pane layoutX="318.0" layoutY="525.0" prefHeight="107.0" prefWidth="209.0" />
-        <Pane layoutX="605.0" layoutY="380.0" prefHeight="107.0" prefWidth="209.0">
-            <children>
-                <Pane prefHeight="107.0" prefWidth="189.0" />
-            </children>
-        </Pane>
         <ImageView fx:id="boardLeft" fitHeight="673.0" fitWidth="432.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@../assets/board/board_left_1.png" />
+         <image>
+            <Image url="@../assets/board/board_left_1/board_left_1.png" />
+         </image>
+      </ImageView>
+        <ImageView fx:id="topRedSpawn" fitHeight="156.0" fitWidth="78.0" layoutY="212.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
         </ImageView>
-        <ImageView fx:id="topRedSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="-1.0" layoutY="212.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
-            <image>
-                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
-            </image>
+        <ImageView fx:id="middleRedSpawn" fitHeight="156.0" fitWidth="78.0" layoutY="312.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
         </ImageView>
-        <ImageView fx:id="middleRedSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="-1.0" layoutY="312.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
-            <image>
-                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
-            </image>
-        </ImageView>
-        <ImageView fx:id="bottomRedSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="-1.0" layoutY="411.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
-            <image>
-                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
-            </image>
+        <ImageView fx:id="bottomRedSpawn" fitHeight="156.0" fitWidth="78.0" layoutY="412.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
         </ImageView>
     </Pane>
-    <Pane GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="0" GridPane.rowSpan="6">
+    <Pane prefHeight="341.0" prefWidth="275.0" GridPane.columnIndex="1">
         <ImageView fx:id="boardRight" fitHeight="673.0" fitWidth="472.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="0" GridPane.rowSpan="6">
-            <Image url="@../assets/board/board_right_1.png" />
+         <image>
+            <Image url="@../assets/board/board_right_1/board_right_1.png" />
+         </image></ImageView>
+        <ImageView fx:id="topYellowSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="371.0" layoutY="345.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
         </ImageView>
-        <ImageView fx:id="topYellowSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="368.0" layoutY="348.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
-            <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
+        <ImageView fx:id="middleYellowSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="371.0" layoutY="445.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
         </ImageView>
-        <ImageView fx:id="middleYellowSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="368.0" layoutY="446.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
-            <image>
-                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
-            </image>
+        <ImageView fx:id="bottomYellowSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="371.0" layoutY="545.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
         </ImageView>
-        <ImageView fx:id="bottomYellowSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="368.0" layoutY="541.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
-            <image>
-                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
-            </image>
+        <ImageView fx:id="rightBlueSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="30" layoutY="-34.0" pickOnBounds="true" preserveRatio="true">
         </ImageView>
-        <ImageView fx:id="rightBlueSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="242.0" layoutY="-22.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
-            </image>
+        <ImageView fx:id="middleBlueSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="130.0" layoutY="-34.0" pickOnBounds="true" preserveRatio="true">
         </ImageView>
-        <ImageView fx:id="middleBlueSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="145.0" layoutY="-22.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
-            </image>
+        <ImageView fx:id="leftBlueSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="230.0" layoutY="-34.0" pickOnBounds="true" preserveRatio="true">
         </ImageView>
-        <ImageView fx:id="leftBlueSpawn" fitHeight="160.0" fitWidth="90.0" layoutX="46.0" layoutY="-22.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../assets/cards/AD_weapons_IT_0219.png" />
-            </image>
-        </ImageView>
+      <GridPane layoutX="22.0" layoutY="156.0" prefHeight="426.0" prefWidth="286.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="146.0" minHeight="10.0" prefHeight="143.75" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="142.25" minHeight="10.0" prefHeight="142.25" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Pane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="122.0" fitWidth="150.0" layoutX="5.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../assets/board/board_right_1/tile22.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+               <children>
+                  <ImageView fitHeight="156.0" fitWidth="143.0" layoutX="14.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../assets/board/board_right_1/tile21.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <ImageView fitHeight="130.0" fitWidth="116.0" layoutX="20.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </Pane>
+         </children>
+      </GridPane>
     </Pane>
 </GridPane>
