--- a/files/fxml/board.fxml
+++ b/files/fxml/board.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="board" prefHeight="673.0" prefWidth="858.0" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="2" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerBoard">
+<GridPane fx:id="board" prefHeight="673.0" prefWidth="858.0" stylesheets="@../css/match.css" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="2" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerBoard">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" percentWidth="48.0" />
         <ColumnConstraints hgrow="SOMETIMES" percentWidth="52.0" />
@@ -20,71 +19,45 @@
       <RowConstraints />
       <RowConstraints />
     </rowConstraints>
-    <Pane prefHeight="672.0" prefWidth="436.0" GridPane.columnSpan="2" GridPane.rowSpan="6">
-        <ImageView fx:id="boardLeft" fitHeight="673.0" fitWidth="432.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/board/board_left_1/board_left_1.png" />
-         </image>
-      </ImageView>
-        <ImageView fx:id="topRedSpawn" fitHeight="156.0" fitWidth="78.0" layoutY="212.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
-        </ImageView>
-        <ImageView fx:id="middleRedSpawn" fitHeight="156.0" fitWidth="78.0" layoutY="312.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
-        </ImageView>
-        <ImageView fx:id="bottomRedSpawn" fitHeight="156.0" fitWidth="78.0" layoutY="412.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
-        </ImageView>
-    </Pane>
     <Pane prefHeight="341.0" prefWidth="275.0" GridPane.columnIndex="1">
-        <ImageView fx:id="boardRight" fitHeight="673.0" fitWidth="472.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="0" GridPane.rowSpan="6">
-         <image>
-            <Image url="@../assets/board/board_right_1/board_right_1.png" />
-         </image></ImageView>
+        <ImageView fx:id="boardRight" fitHeight="673.0" fitWidth="472.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="0" GridPane.rowSpan="6"/>
         <ImageView fx:id="topYellowSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="371.0" layoutY="345.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
         </ImageView>
         <ImageView fx:id="middleYellowSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="371.0" layoutY="445.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
         </ImageView>
         <ImageView fx:id="bottomYellowSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="371.0" layoutY="545.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
         </ImageView>
-        <ImageView fx:id="rightBlueSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="30" layoutY="-34.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="rightBlueSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="52.0" layoutY="-34.0" pickOnBounds="true" preserveRatio="true">
         </ImageView>
-        <ImageView fx:id="middleBlueSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="130.0" layoutY="-34.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="middleBlueSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="152.0" layoutY="-34.0" pickOnBounds="true" preserveRatio="true">
         </ImageView>
-        <ImageView fx:id="leftBlueSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="230.0" layoutY="-34.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="leftBlueSpawn" fitHeight="156.0" fitWidth="78.0" layoutX="252.0" layoutY="-34.0" pickOnBounds="true" preserveRatio="true">
         </ImageView>
-      <GridPane layoutX="22.0" layoutY="156.0" prefHeight="426.0" prefWidth="286.0">
+    </Pane>
+    <Pane prefHeight="672.0" prefWidth="436.0" GridPane.columnSpan="2" GridPane.rowSpan="6">
+        <ImageView fx:id="boardLeft" fitHeight="673.0" fitWidth="432.0" pickOnBounds="true" preserveRatio="true">
+      </ImageView>
+        <ImageView fx:id="topRedSpawn" fitHeight="156.0" fitWidth="78.0" layoutY="208.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+        </ImageView>
+        <ImageView fx:id="middleRedSpawn" fitHeight="156.0" fitWidth="78.0" layoutY="308.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+        </ImageView>
+        <ImageView fx:id="bottomRedSpawn" fitHeight="156.0" fitWidth="78.0" layoutY="408.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+        </ImageView>
+      <GridPane fx:id="boardSkull" layoutX="4.0" layoutY="34.0" prefHeight="56.0" prefWidth="295.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="83.0" minWidth="10.0" percentWidth="14.29" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="83.0" minWidth="10.0" percentWidth="14.29" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="83.0" minWidth="10.0" percentWidth="14.29" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="83.0" minWidth="10.0" percentWidth="14.29" prefWidth="66.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="83.0" minWidth="7.0" percentWidth="14.29" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="83.0" minWidth="10.0" percentWidth="14.29" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="83.0" minWidth="10.0" percentWidth="14.29" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="83.0" minWidth="10.0" percentWidth="14.29" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="146.0" minHeight="10.0" prefHeight="143.75" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="142.25" minHeight="10.0" prefHeight="142.25" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Pane prefHeight="200.0" prefWidth="200.0">
-               <children>
-                  <ImageView fitHeight="122.0" fitWidth="150.0" layoutX="5.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../assets/board/board_right_1/tile22.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
-               <children>
-                  <ImageView fitHeight="156.0" fitWidth="143.0" layoutX="14.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../assets/board/board_right_1/tile21.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <children>
-                  <ImageView fitHeight="130.0" fitWidth="116.0" layoutX="20.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
-               </children>
-            </Pane>
          </children>
       </GridPane>
     </Pane>
