--- a/files/fxml/weapon.fxml
+++ b/files/fxml/weapon.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -13,11 +12,11 @@
         <ColumnConstraints hgrow="NEVER" percentWidth="33" />
         <ColumnConstraints hgrow="NEVER" percentWidth="33" />
     </columnConstraints>
-    <ImageView fx:id="weaponFirst" fitHeight="203.0" fitWidth="116.0" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="0">
+    <ImageView fx:id="weaponLeft" fitHeight="203.0" fitWidth="116.0" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="0">
     </ImageView>
-    <ImageView fx:id="weaponSecond" fitHeight="203.0" fitWidth="116.0" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="0">
+    <ImageView fx:id="weaponMiddle" fitHeight="203.0" fitWidth="116.0" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="0">
     </ImageView>
-    <ImageView fx:id="weaponThird" fitHeight="203.0" fitWidth="116.0" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="0">
+    <ImageView fx:id="weaponRight" fitHeight="203.0" fitWidth="116.0" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="0">
     </ImageView>
    <Pane prefHeight="200.0" prefWidth="107.0">
       <children>
