--- a/files/fxml/match_setup.fxml
+++ b/files/fxml/match_setup.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowSpan="3" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowSpan="3" xmlns="http://javafx.com/javafx/8.0.21" xmlns:fx="http://javafx.com/fxml/1" >
     <children>
-        <GridPane layoutX="15.0" layoutY="81.0" prefHeight="533.0" prefWidth="591.0">
+        <GridPane fx:id = "choiceGrid" layoutX="15.0" layoutY="81.0" prefHeight="533.0" prefWidth="591.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100.0" />
             </columnConstraints>
@@ -22,7 +22,7 @@
                 <RowConstraints maxHeight="260.0" minHeight="10.0" prefHeight="260.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Pane prefHeight="200.0" prefWidth="200.0">
+                <Pane fx:id = "frenzyPane" prefHeight="200.0" prefWidth="200.0">
                     <children>
                         <Label alignment="CENTER" prefHeight="63.0" prefWidth="591.0" text="Please select your preferred skull number and map type" textFill="WHITE">
                             <font>
