--- a/files/fxml/table.fxml
+++ b/files/fxml/table.fxml
@@ -2,139 +2,143 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane depthTest="DISABLE" hgap="10.0" maxHeight="1080" maxWidth="1920" minHeight="0" minWidth="0" prefHeight="977.0" prefWidth="1904.0" stylesheets="@../css/match.css" vgap="10.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerTable">
-    <columnConstraints>
-        <ColumnConstraints hgrow="NEVER" percentWidth="5.0" />
-        <ColumnConstraints hgrow="NEVER" maxWidth="675.92" minWidth="10.0" prefWidth="403.6666564941406" />
-        <ColumnConstraints hgrow="NEVER" maxWidth="265.54" minWidth="0.0" prefWidth="129.33334350585938" />
-        <ColumnConstraints hgrow="NEVER" maxWidth="626.0" minWidth="10.0" prefWidth="600.6666870117188" />
-        <ColumnConstraints hgrow="NEVER" maxWidth="280.0" minWidth="10.0" prefWidth="125.0" />
-        <ColumnConstraints hgrow="NEVER" maxWidth="675.92" minWidth="10.0" prefWidth="365.0" />
-        <ColumnConstraints hgrow="NEVER" maxWidth="316.0" minWidth="0.0" percentWidth="5.0" prefWidth="0.0" />
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints maxHeight="96.0" minHeight="6.0" percentHeight="4.0" prefHeight="96.0" vgrow="NEVER" />
-        <RowConstraints maxHeight="96.0" minHeight="6.0" percentHeight="4.0" prefHeight="96.0" vgrow="NEVER" />
-        <RowConstraints maxHeight="703.0" minHeight="613.0" percentHeight="75.0" prefHeight="691.0" vgrow="NEVER" />
-        <RowConstraints maxHeight="182.0" minHeight="0.0" percentHeight="2.0" prefHeight="0.0" vgrow="NEVER" />
-      <RowConstraints maxHeight="193.0" minHeight="16.0" percentHeight="20.0" prefHeight="123.0" vgrow="NEVER" />
-    </rowConstraints>
- <ImageView fx:id="currentPlayer" fitHeight="219.0" fitWidth="890.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3" GridPane.rowSpan="2">
-      <image>
-         <Image url="@../assets/player/player_yellow.png" />
-      </image></ImageView>
-   <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
-         <ImageView fx:id="run" fitHeight="25.0" fitWidth="40.0" layoutX="8.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-         <ImageView fx:id="moveAndGrab" fitHeight="25.0" fitWidth="40.0" layoutX="8.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true" />
-         <ImageView fx:id="shoot" fitHeight="25.0" fitWidth="40.0" layoutX="8.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true" />
-         <ImageView fx:id="reload" fitHeight="42.0" fitWidth="40.0" layoutX="14.0" layoutY="121.0" pickOnBounds="true" />
-   </Pane>
-   <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
-         <ImageView fx:id="moveMoveGrab" fitHeight="25.0" fitWidth="40.0" layoutX="44.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-         <ImageView fx:id="moveShoot" fitHeight="25.0" fitWidth="40.0" layoutX="191.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
 
-          <!-- hp grid pane -->
-         <GridPane fx:id="hp" hgap="10.0" layoutX="-61.0" layoutY="41.0" prefHeight="70.0" prefWidth="591.0">
-           <columnConstraints>
-             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
-           </columnConstraints>
-           <rowConstraints>
-             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-           </rowConstraints>
-         <children>
+<AnchorPane stylesheets="@../css/match.css" xmlns="http://javafx.com/javafx/8.0.21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerTable">
+   <children>
+      <GridPane fx:id="root" depthTest="DISABLE" hgap="10.0" maxHeight="1080" maxWidth="1920" minHeight="0" minWidth="0" prefHeight="977.0" prefWidth="1904.0" vgap="10.0">
+          <columnConstraints>
+              <ColumnConstraints hgrow="NEVER" percentWidth="5.0" />
+              <ColumnConstraints hgrow="NEVER" maxWidth="675.92" minWidth="10.0" prefWidth="403.6666564941406" />
+              <ColumnConstraints hgrow="NEVER" maxWidth="265.54" minWidth="0.0" prefWidth="129.33334350585938" />
+              <ColumnConstraints hgrow="NEVER" maxWidth="626.0" minWidth="10.0" prefWidth="600.6666870117188" />
+              <ColumnConstraints hgrow="NEVER" maxWidth="280.0" minWidth="10.0" prefWidth="125.0" />
+              <ColumnConstraints hgrow="NEVER" maxWidth="675.92" minWidth="10.0" prefWidth="365.0" />
+              <ColumnConstraints hgrow="NEVER" maxWidth="316.0" minWidth="0.0" percentWidth="5.0" prefWidth="0.0" />
+          </columnConstraints>
+          <rowConstraints>
+              <RowConstraints maxHeight="96.0" minHeight="6.0" percentHeight="4.0" prefHeight="96.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="96.0" minHeight="6.0" percentHeight="4.0" prefHeight="96.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="703.0" minHeight="613.0" percentHeight="75.0" prefHeight="691.0" vgrow="NEVER" />
+              <RowConstraints maxHeight="182.0" minHeight="0.0" percentHeight="2.0" prefHeight="0.0" vgrow="NEVER" />
+            <RowConstraints maxHeight="193.0" minHeight="16.0" percentHeight="20.0" prefHeight="123.0" vgrow="NEVER" />
+          </rowConstraints>
+       <ImageView fx:id="currentPlayer" fitHeight="219.0" fitWidth="890.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3" GridPane.rowSpan="2">
+            <image>
+               <Image url="@../assets/player/player_yellow.png" />
+            </image>
+         </ImageView>
+         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
+               <ImageView fx:id="run" fitHeight="25.0" fitWidth="40.0" layoutX="8.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+               <ImageView fx:id="moveAndGrab" fitHeight="25.0" fitWidth="40.0" layoutX="8.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true" />
+               <ImageView fx:id="shoot" fitHeight="25.0" fitWidth="40.0" layoutX="8.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true" />
+               <ImageView fx:id="reload" fitHeight="42.0" fitWidth="40.0" layoutX="14.0" layoutY="121.0" pickOnBounds="true" />
+         </Pane>
+         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
+               <ImageView fx:id="moveMoveGrab" fitHeight="25.0" fitWidth="40.0" layoutX="44.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+               <ImageView fx:id="moveShoot" fitHeight="25.0" fitWidth="40.0" layoutX="191.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+      
+                <!-- hp grid pane -->
+               <GridPane fx:id="hp" hgap="10.0" layoutX="-61.0" layoutY="41.0" prefHeight="70.0" prefWidth="591.0">
+                 <columnConstraints>
+                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
+                 </columnConstraints>
+                 <rowConstraints>
+                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                 </rowConstraints>
+               <children>
          </children>
-         </GridPane>
-
-          <!-- skull grid pane, the ones over player death value-->
-         <GridPane fx:id="skull" hgap="5.0" layoutX="44.0" layoutY="134.0" prefHeight="36.0" prefWidth="275.0">
-           <columnConstraints>
-             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           </columnConstraints>
-           <rowConstraints>
-             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-           </rowConstraints>
-         <children>
+               </GridPane>
+      
+                <!-- skull grid pane, the ones over player death value-->
+               <GridPane fx:id="skull" hgap="5.0" layoutX="44.0" layoutY="134.0" prefHeight="36.0" prefWidth="275.0">
+                 <columnConstraints>
+                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                 </columnConstraints>
+                 <rowConstraints>
+                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                 </rowConstraints>
+               <children>
          </children>
-         </GridPane>
-   </Pane>
-   <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
-          <!-- mark grid pane-->
-         <GridPane fx:id="mark" hgap="2.0" layoutX="326.0" layoutY="-5.0" prefHeight="56.0" prefWidth="201.0">
-           <columnConstraints>
-             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           </columnConstraints>
-           <rowConstraints>
-             <RowConstraints minHeight="10.0" percentHeight="35.0" prefHeight="30.0" vgrow="SOMETIMES" />
-             <RowConstraints minHeight="10.0" percentHeight="65.0" prefHeight="30.0" vgrow="SOMETIMES" />
-           </rowConstraints>
-         <children>
+               </GridPane>
+         </Pane>
+         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
+                <!-- mark grid pane-->
+               <GridPane fx:id="mark" hgap="2.0" layoutX="326.0" layoutY="-5.0" prefHeight="56.0" prefWidth="201.0">
+                 <columnConstraints>
+                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                 </columnConstraints>
+                 <rowConstraints>
+                   <RowConstraints minHeight="10.0" percentHeight="35.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                   <RowConstraints minHeight="10.0" percentHeight="65.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                 </rowConstraints>
+               <children>
          </children>
-         </GridPane>
-   </Pane>
-   <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-         <TableView layoutX="31.0" layoutY="148.0" prefHeight="314.0" prefWidth="342.0">
-           <columns>
-             <TableColumn prefWidth="75.0" text="Username" />
-             <TableColumn prefWidth="75.0" text="Score" />
-           </columns>
-            <columnResizePolicy>
-               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-            </columnResizePolicy>
-         </TableView>
-   </Pane>
-   <Pane prefHeight="200.0" prefWidth="200.0">
-          <Button id="leave" fx:id="leave" prefHeight="50.0" prefWidth="100.0" text="Leave" textAlignment="CENTER">
-              <font>
-                  <Font size="15.0" />
-              </font>
-          </Button>
-   </Pane>
-   <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6">
-          <Button id="endTurn" fx:id="endTurn" layoutX="-8.0" prefHeight="50.0" prefWidth="108.0" text="End Turn" textAlignment="CENTER">
-            <font>
-               <Font size="15.0" />
-            </font>
-          </Button>
-   </Pane>
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
-</GridPane>
+               </GridPane>
+         </Pane>
+         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <TableView layoutX="31.0" layoutY="148.0" prefHeight="314.0" prefWidth="342.0">
+                 <columns>
+                   <TableColumn prefWidth="75.0" text="Username" />
+                   <TableColumn prefWidth="75.0" text="Score" />
+                 </columns>
+                  <columnResizePolicy>
+                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                  </columnResizePolicy>
+               </TableView>
+         </Pane>
+         <Pane prefHeight="200.0" prefWidth="200.0">
+                <Button id="leave" fx:id="leave" prefHeight="50.0" prefWidth="100.0" text="Leave" textAlignment="CENTER">
+                    <font>
+                        <Font size="15.0" />
+                    </font>
+                </Button>
+         </Pane>
+         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6">
+                <Button id="endTurn" fx:id="endTurn" layoutX="-8.0" prefHeight="50.0" prefWidth="108.0" text="End Turn" textAlignment="CENTER">
+                  <font>
+                     <Font size="15.0" />
+                  </font>
+                </Button>
+         </Pane>
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
+      </GridPane>
+   </children>
+</AnchorPane>
