--- a/files/css/match.css
+++ b/files/css/match.css
@@ -39,6 +39,8 @@
     /*-fx-text-fill: linear-gradient(white, #d0d0d0);*/
     -fx-font-size: 24px;
 }
+
+
 .table-row-cell{
     /*-fx-background-color:
         #090a0c,
@@ -48,6 +50,18 @@
     -fx-background-insets: 0,1,2,0;*/
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
     -fx-text-fill: white;
+    -fx-font-family: "Arial";
+}
+
+.table-row-cell:selected .table-cell{
+    -fx-background-color:
+        #090a0c,
+        linear-gradient(#38424b 0%, #1f2429 20%, #191d22 100%),
+        linear-gradient(#20262b, #191d22);
+    -fx-background-radius: 5,4,3,5;
+    -fx-background-insets: 0,1,2,0;
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+    -fx-text-fill: grey;
     -fx-font-family: "Arial";
 }
 
