--- a/files/fxml/left2_tiles.fxml
+++ b/files/fxml/left2_tiles.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane layoutX="138.0" layoutY="142.0" prefHeight="459.0" prefWidth="303.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="leftGrid" layoutX="138.0" layoutY="142.0" prefHeight="459.0" prefWidth="303.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -20,31 +20,31 @@
         <Pane fx:id="pane12" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
             <ImageView fx:id="tile12" fitHeight="123.0" fitWidth="144.0" layoutX="6.0" layoutY="15.0" pickOnBounds="true" />
             <ImageView fx:id="loot12" fitHeight="38.0" fitWidth="37.0" layoutX="27.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" />
-         <ImageView fitHeight="63.75" fitWidth="62.0" layoutX="45.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" />
+         <ImageView fx:id = "center12" fitHeight="63.75" fitWidth="62.0" layoutX="45.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" />
         </Pane>
         <Pane fx:id="pane11" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
             <ImageView fx:id="tile11" fitHeight="140.0" fitWidth="133.0" layoutX="10.0" layoutY="4.0" pickOnBounds="true" />
             <ImageView fx:id="loot11" fitHeight="38.0" fitWidth="37.0" layoutX="15.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true" />
-         <ImageView fitHeight="63.75" fitWidth="62.0" layoutX="67.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true" />
+         <ImageView fx:id = "center11" fitHeight="63.75" fitWidth="62.0" layoutX="67.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true" />
         </Pane>
         <Pane fx:id="pane10" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                 <ImageView fx:id="tile10" fitHeight="122.0" fitWidth="140.0" layoutX="1.0" layoutY="15.0" pickOnBounds="true" />
                 <ImageView fx:id="loot10" fitHeight="38.0" fitWidth="37.0" layoutX="18.0" layoutY="74.0" pickOnBounds="true" preserveRatio="true" />
-         <ImageView fitHeight="63.75" fitWidth="62.0" layoutX="63.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true" />
+         <ImageView fx:id = "center10" fitHeight="63.75" fitWidth="62.0" layoutX="63.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true" />
         </Pane>
         <Pane fx:id="pane00" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
             <ImageView fx:id="tile00" fitHeight="122.0" fitWidth="138.0" layoutX="17.0" layoutY="14.0" pickOnBounds="true" />
             <ImageView fx:id="loot00" fitHeight="38.0" fitWidth="37.0" layoutX="45.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true" />
-         <ImageView fitHeight="63.75" fitWidth="62.0" layoutX="86.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" />
+         <ImageView fx:id = "center00" fitHeight="63.75" fitWidth="62.0" layoutX="86.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" />
         </Pane>
         <Pane fx:id="pane01" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                 <ImageView fx:id="tile01" fitHeight="145.0" fitWidth="112.0" layoutX="24.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" />
-         <ImageView fitHeight="63.75" fitWidth="62.0" layoutX="46.0" layoutY="59.0" pickOnBounds="true" preserveRatio="true" />
+         <ImageView fx:id = "center01" fitHeight="63.75" fitWidth="62.0" layoutX="46.0" layoutY="59.0" pickOnBounds="true" preserveRatio="true" />
         </Pane>
         <Pane fx:id="pane02" prefHeight="200.0" prefWidth="200.0">
                 <ImageView fx:id="tile02" fitHeight="143.0" fitWidth="115.0" layoutX="26.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
                 <ImageView fx:id="loot02" fitHeight="38.0" fitWidth="37.0" layoutX="45.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true" />
-         <ImageView fitHeight="63.75" fitWidth="62.0" layoutX="64.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" />
+         <ImageView fx:id = "center02" fitHeight="63.75" fitWidth="62.0" layoutX="64.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" />
         </Pane>
     </children>
 </GridPane>
