--- a/files/fxml/table.fxml
+++ b/files/fxml/table.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="root" depthTest="DISABLE" hgap="10.0" maxHeight="1080" maxWidth="1920" minHeight="0" minWidth="0" prefHeight="977.0" prefWidth="1904.0" stylesheets="@../css/match.css" vgap="10.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerTable">
+<GridPane fx:id="root" depthTest="DISABLE" hgap="10.0" maxHeight="1080" maxWidth="1920" minHeight="0" minWidth="0" prefHeight="977.0" prefWidth="1904.0" stylesheets="@../css/match.css" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerTable">
           <columnConstraints>
               <ColumnConstraints hgrow="NEVER" percentWidth="5.0" />
               <ColumnConstraints hgrow="NEVER" maxWidth="675.92" minWidth="10.0" prefWidth="403.6666564941406" />
@@ -30,18 +30,13 @@
           </rowConstraints>
 
        <ImageView fx:id="currentPlayer" fitHeight="219.0" fitWidth="890.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3" GridPane.rowSpan="2" />
-         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
+         <Pane fx:id="playerCombo" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <ImageView fx:id="RunAround" fitHeight="25.0" fitWidth="40.0" layoutX="8.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
                <ImageView fx:id="GrabStuff" fitHeight="25.0" fitWidth="40.0" layoutX="8.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true" />
                <ImageView fx:id="ShootPeople" fitHeight="25.0" fitWidth="40.0" layoutX="8.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true" />
                <ImageView fx:id="reload" fitHeight="42.0" fitWidth="40.0" layoutX="14.0" layoutY="121.0" pickOnBounds="true" />
-      <ImageView fx:id="FrenzyMoveReloadShoot" fitHeight="17.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="FrenzyMoveFour" fitHeight="17.0" fitWidth="60.0" layoutX="-3.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="FrenzyMoveMoveGrab" fitHeight="17.0" fitWidth="60.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="FrenzyMoveMoveReloadShoot" fitHeight="17.0" fitWidth="60.0" layoutX="-5.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="FrenzyMoveThreeGrab" fitHeight="17.0" fitWidth="60.0" layoutX="-2.0" layoutY="147.0" pickOnBounds="true" preserveRatio="true" />
          </Pane>
-         <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
+         <Pane fx:id="playerComboDamaged" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
                <ImageView fx:id="DamagedMoveMoveGrab" fitHeight="25.0" fitWidth="40.0" layoutX="44.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
                <ImageView fx:id="DamagedMoveShoot" fitHeight="25.0" fitWidth="40.0" layoutX="191.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
       
@@ -119,6 +114,7 @@
             <Font size="36.0" />
          </font>
       </Label>
+      <Label fx:id="turnTimer" alignment="CENTER" layoutX="134.0" layoutY="37.0" prefHeight="50.0" prefWidth="122.0" />
          </Pane>
          <Pane prefHeight="200.0" prefWidth="200.0">
                 <Button id="leave" fx:id="leave" prefHeight="50.0" prefWidth="100.0" text="Leave" textAlignment="CENTER">
