--- a/files/fxml/board_skull.fxml
+++ b/files/fxml/board_skull.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/1" xmlns:fx="http://javafx.com/fxml/1">
     <ImageView fitHeight="54.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
       <image>
          <Image url="@../assets/skull.png" />
