--- a/files/fxml/match_setup.fxml
+++ b/files/fxml/match_setup.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowSpan="3" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowSpan="3" xmlns="http://javafx.com/javafx/1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <GridPane fx:id="choiceGrid" layoutX="15.0" layoutY="81.0" prefHeight="533.0" prefWidth="591.0">
             <columnConstraints>
