--- a/files/fxml/right1_tiles.fxml
+++ b/files/fxml/right1_tiles.fxml
@@ -41,7 +41,7 @@
       <ImageView fx:id="center31" fitHeight="63.75" fitWidth="62.5" layoutX="40.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true" />
         </Pane>
         <Pane fx:id="pane20" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
-      <ImageView fx:id="tile20" fitHeight="144.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="tile20" fitHeight="160.0" fitWidth="140.0" layoutX="4.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
          </ImageView>
                 <ImageView fx:id="loot20" fitHeight="35.0" fitWidth="35.0" layoutX="35.0" layoutY="79.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="center20" fitHeight="63.75" fitWidth="62.0" layoutX="59.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
