--- a/files/fxml/table.fxml
+++ b/files/fxml/table.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -29,7 +30,8 @@
             <RowConstraints maxHeight="193.0" minHeight="16.0" percentHeight="20.0" prefHeight="123.0" vgrow="NEVER" />
           </rowConstraints>
 
-       <ImageView fx:id="currentPlayer" fitHeight="219.0" fitWidth="890.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3" GridPane.rowSpan="2" />
+       <ImageView fx:id="currentPlayer" fitHeight="219.0" fitWidth="890.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3" GridPane.rowSpan="2">
+       </ImageView>
          <Pane fx:id="playerCombo" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <ImageView fx:id="RunAround" fitHeight="25.0" fitWidth="40.0" layoutX="8.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
                <ImageView fx:id="GrabStuff" fitHeight="25.0" fitWidth="40.0" layoutX="8.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true" />
@@ -41,7 +43,7 @@
                <ImageView fx:id="DamagedMoveShoot" fitHeight="25.0" fitWidth="40.0" layoutX="191.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
       
                 <!-- hp grid pane -->
-               <GridPane fx:id="hp" hgap="10.0" layoutX="-61.0" layoutY="41.0" prefHeight="70.0" prefWidth="591.0">
+               <GridPane fx:id="hp"  hgap="10.0" layoutX="-61.0" layoutY="41.0" prefHeight="70.0" prefWidth="591.0">
                  <columnConstraints>
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="8.33" prefWidth="100.0" />
