--- a/files/fxml/tear_board_stacked.fxml
+++ b/files/fxml/tear_board_stacked.fxml
@@ -5,12 +5,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Circle?>
 <Pane prefHeight="200.0" prefWidth="200.0">
-        <Circle fill="DODGERBLUE" layoutX="12.0" layoutY="33.0" radius="12.0" stroke="DODGERBLUE" strokeType="INSIDE">
+        <Circle  layoutX="12.0" layoutY="33.0" radius="12.0" strokeType="INSIDE">
             <effect>
                 <DropShadow blurType="GAUSSIAN" height="20.0" radius="9.5" width="20.0" />
             </effect>
         </Circle>
-        <Circle fill="DODGERBLUE" layoutX="19.0" layoutY="25.0" radius="12.0" stroke="DODGERBLUE" strokeType="INSIDE">
+        <Circle layoutX="19.0" layoutY="25.0" radius="12.0" strokeType="INSIDE">
             <effect>
                 <DropShadow blurType="GAUSSIAN" height="20.0" radius="9.5" width="20.0" />
             </effect>
